# TODOS

./: .editorconfig  .flake8  README.md  pyproject.toml
scripts/: todos_schema.sql
tests/: test_numequality.py
todos/: config.py  gui.py  main.py
